# UM_ACT_LEROBOT

./: .env.example  .gitignore  .slurm_train_all.sh  Makefile  README.md  configs.py  pyproject.toml  requirements.txt  sdasd.md  test_make.mk  train.bash  train.py
src/cameras/: __init__.py
src/cameras/filtered_opencv/: __init__.py  configuration_filtered_opencv.py  filtered_opencv_camera.py
src/config/: __init__.py  configs.py
src/scripts/: eval.py  lerobot_record_filtered.py  train.py
