[project]
name = "um-act-lerobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "dotenv>=0.9.9",
    "lerobot[dataset]>=0.4.4",
    "python-dotenv>=1.2.2",
    "torch>=2.10.0",
    "wandb>=0.24.2",
]
