[project]
name = "um-act-lerobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "accelerate>=0.30.0,<0.34.0",
    "feetech-servo-sdk>=1.0.0",
    "lerobot==0.1.0",
    "python-dotenv>=1.0.0",
    "timm>=0.9.0,<1.0.0",
    "torch>=2.0.0,<2.5.0",
    "wandb>=0.16.0,<0.18.0",
]